--- a/public/landscape_genomics/index.html
+++ b/public/landscape_genomics/index.html
@@ -633,8 +633,12 @@
 </thead>
 <tbody>
 <tr>
-<td align="center"><img src="featured.jpg" width="350" height = "450"></td>
-<td align="center"><img src="Basilisk.jpg" width="300" height="350"></td>
+<td align="center"><img src="featured.jpg" width="320" height = "280"></td>
+<td align="center"><img src="Basilisk.jpg" width="280" height="200"></td>
+</tr>
+<tr>
+<td align="center"><br style="clear:both;" /></td>
+<td></td>
 </tr>
 </tbody>
 </table>
